# Workbench

./: .gitignore  .gitmodules  CMakeLists.txt
Log/: CMakeLists.txt  Log.cpp  Log.h
Utils/: IWindow.h  Pool.h  VariadicMacro.h
cmake/: UtilityFunctions.cmake
